--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 Truffelmayo<br/>
                                 Bacon<br/>
                                 Parmesan cheese<br/>
-                                Spring Onion<
+                                Spring Onion
                             </div>
                         </div>
                     </div>
