--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="content-background">
+</div>
+<div class="img-section">
+    <img src="assets/background.jpg" alt="background"/>
+</div>
 <div>
     <div class="carousel-container">
         <div class="carousel">
-            <div class="carousel-item grid-4 active">
+            <div id="loaded-fries" class="carousel-item grid-4 active">
                 <div class="showcase-box">
                     <div class="carousel-text">The Original</div>
                     <div class="showcase-box-image">
