Add allergy page

--- a/index.html
+++ b/index.html
@@ -117,6 +117,32 @@
                     </div>
                 </div>
             </div>
+            <div class="carousel-item">
+                <div class="allergy-container">
+                    <div class="allergy-showcase-box">
+                        <span class="carousel-detail-text">Heeft u een allergie of dieetwens? Laat dit alstublieft weten aan een van onze medewerkers vóór het bestellen. Wij helpen u graag bij het maken van een veilige en passende keuze.</span>
+                        <hr>
+                        <div class="allergy-grid-container">
+                            <div class="allergy-grid">
+                                <img src="assets/allergies/ei.png" alt="Allergy 1">
+                                <img src="assets/allergies/gluten.png" alt="Allergy 2">
+                                <img src="assets/allergies/lupine.png" alt="Allergy 3">
+                                <img src="assets/allergies/melk.png" alt="Allergy 4">
+                                <img src="assets/allergies/mosterd.png" alt="Allergy 5">
+                                <img src="assets/allergies/noten.png" alt="Allergy 6">
+                                <img src="assets/allergies/pindas.png" alt="Allergy 7">
+                                <img src="assets/allergies/schaald.png" alt="Allergy 8">
+                                <img src="assets/allergies/selderij.png" alt="Allergy 9">
+                                <img src="assets/allergies/sesamzaad.png" alt="Allergy 10">
+                                <img src="assets/allergies/soja.png" alt="Allergy 11">
+                                <img src="assets/allergies/vis.png" alt="Allergy 12">
+                                <img src="assets/allergies/weekdieren.png" alt="Allergy 13">
+                                <img src="assets/allergies/zwavel.png" alt="Allergy 14">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
